// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorFeedback should render with correct data when match is false 1`] = `
<section
  className="colorFeedback-main"
>
  <div
    className="colorFeedback-main-colorBox"
    style={
      Object {
        "backgroundColor": "#F6003C",
      }
    }
  />
  <h2
    className="colorFeedback-main-name"
  >
    NEON STRAWBERRY
  </h2>
  <p
    className="colorFeedback-main-feedback"
  >
    Terrible choice! Your host's season is 
    WINTER
    . 
    NEON STRAWBERRY
     will make them look tired, sad and afraid, and the church will surely try to perform an exorcism on them!
  </p>
  <Link
    to="/"
  >
    <button
      className="back-button"
    >
      Back
    </button>
  </Link>
</section>
`;

exports[`ColorFeedback should render with correct data when match is true 1`] = `
<section
  className="colorFeedback-main"
>
  <div
    className="colorFeedback-main-colorBox"
    style={
      Object {
        "backgroundColor": "#F6003C",
      }
    }
  />
  <h2
    className="colorFeedback-main-name"
  >
    NEON STRAWBERRY
  </h2>
  <p
    className="colorFeedback-main-feedback"
  >
    Great choice! Your host's season is 
    WINTER
    . 
    NEON STRAWBERRY
     will look great on them - nobody will suspect a thing!  Happy haunting!
  </p>
  <Link
    to="/"
  >
    <button
      className="back-button"
    >
      Back
    </button>
  </Link>
</section>
`;
